--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
   "repository": "https://github.com/liviaalvzs/my-contacts.git",
   "author": "liviaalvzs <liv.alvessantana@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "start": "nodemon src/index.js"
+  },
   "dependencies": {
     "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0 || ^8.2.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.25.2",
+    "nodemon": "^2.0.18"
   }
 }
