--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "start": "nodemon src/index.js"
   },
   "dependencies": {
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "eslint": "^7.32.0 || ^8.2.0",
